--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="container secundario">
         <div class="container__descricao">
             <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
-            <a href="https://www.alura.com.br" target="_blank" class="container__botao secundario__botao">Assinar o Combo+</a>
+            <a href="https://www.alura.com.br" target="_blank" target="_blank" class="container__botao secundario__botao">Assinar o Combo+</a>
         </div>
         <img src="img/Telas.png" alt="Tela do Alura plus e do Alura Lingua" class="secundario__imagem">
     </section>
